Bug #180721.  floating point error when visiting web page.  Paper over the fact that the style system is passing is a pixel size of 0.  Not part of the default build.